# SatSim1

./: .gitignore  Benchmark.cpp  CMakeLists.txt  Quaternion.h  Readme.md  SatelliteComms.cpp  SatelliteComms.h  Vector3.h  main.cpp  r
doc/: NextTransmissionTime.md  Performance.md  Quaternion.md  Rationale.md
resources/: benchmark.txt
tests/: additional_tests.cpp  performance_tests.cpp  test.cpp
